allowed_registries.yaml
# src: https://github.com/open-policy-agent/gatekeeper/blob/master/demo/agilebank/constraints/prod_repo_is_openpolicyagent.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sAllowedRepos
metadata:
  name: allowed-registries
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    namespaces:
      - "default"
  parameters:
    repos:
      - "demoaksacr01.azurecr.io"
      # - "mcr.microsoft.com"
      # - "gcr.io"
      # - "registry.hub.docker.com"
      # - "openpolicyagent"
